# autotools-neptune

./: .gitignore  Makefile.am  README.md  TODO.org  common.mk  configure.ac
.github/workflows/: main.yml
app/: .gitignore  Makefile.am  README.md  configure.ac
app-template/: .gitignore  Makefile.am
app-template/c_src/: neptune.c
app-template/doc/: neptune.xml  overview.xml  part.xml  ref_man.xml.in.in
app-template/ebin/: neptune.app.in
app-template/include/: neptune.hrl
app-template/m4/: erlang-neptune.m4
app-template/src/: neptune_priv.hrl  neptune_sup.erl
app-template/tests/: atlocal.in  neptune-ct.at  neptune-error.at  neptune-square.at  neptune-version.at  neptune_SUITE.erl
app/c_src/: name.c
app/doc/: book.xml.in  name.xml  name_cmd.xml  overview.xml  part.xml  ref_man.xml.in.in
app/ebin/: name.app.in
app/include/: name.hrl
app/m4/: erlang-app.m4
app/src/: name_app.erl  name_nif.erl  name_priv.hrl  name_server.erl  name_sup.erl
app/tests/: atlocal.in  local.at  name-ct.at  name-dialyzer.at  name-error.at  name-square.at  name-version.at  name_SUITE.erl  name_nif-eunit.at  testsuite.at
c_src/: .gitignore  Makefile.am  neptune.c
doc/: .gitignore  Makefile.am  app.xml  applications.xml  book.xml  book.xml.in  index.html  introduction.xml  make-targets.xml  modules-frame.html.in  neptune.xml  neptune_cmd.xml  overview-summary.html  overview.xml  part.xml  ref_man.xml  ref_man.xml.in  ref_man.xml.in.in  rel.xml  releases.xml
ebin/: .gitignore  neptune.app.in  neptune.app.in.in
include/: Makefile.am  neptune.hrl
m4/: .gitignore  erlang-app.m4  erlang-neptune.m4
man/: Makefile.am  neptune.1
man1/: neptune.1
rel/: Makefile.am  README.md  configure.ac  name-rel.config  name.rel.in
rel/doc/: index.html.in
rel/m4/: erlang-rel.m4
rel/tests/: atlocal.in  local.at  name-dialyzer.at  name-start.at  testsuite.at
src/: .gitignore  Makefile.am  neptune.erl  neptune_app.erl  neptune_args.erl  neptune_io.erl  neptune_limits.hrl  neptune_mod.erl  neptune_nif.erl  neptune_rel.erl  neptune_server.erl  neptune_subs.erl  neptune_sup.erl
tests/: Makefile.am  atlocal.in  ct-config.in  local.at  neptune-app.at  neptune-argument.at  neptune-ct.at  neptune-default.at  neptune-dialyzer.at  neptune-eunit.at  neptune-length-limit.at  neptune-nif-eunit.at  neptune-version.at  neptune.at  neptune_SUITE.erl  neptune_app-eunit.at  neptune_app_in_SUITE.erl  neptune_app_out_SUITE.erl  neptune_args-eunit.at  neptune_in_source_tree_SUITE.erl  neptune_io-eunit.at  neptune_mod-eunit.at  neptune_nif-eunit.at  neptune_out_of_source_tree_SUITE.erl  neptune_rel_in_SUITE.erl  neptune_rel_out_SUITE.erl  neptune_unit.at  package.m4  testsuite.at
